fix homepage alignment

--- a/Views/public/assets/css/stylelight.css
+++ b/Views/public/assets/css/stylelight.css
@@ -140,6 +140,13 @@ button {
     font-weight: 500;
 }
 
+
+.loginbutton,
+.signupbutton {
+margin: none;
+text-align: left;
+}
+
 select {
     padding-top: 2px;
     border: none;
